@@ -83,6 +83,7 @@ xfce/ristretto
 xfce/xarchiver
 xfce/thunar-archive-plugin
 multimedia/cddb-py
+xap/leafpad
 
 
 
