@@ -1,0 +1,12 @@
+       |-----handy-ruler------------------------------------------------------|
+leafpad: leafpad (a notepad clone for GTK+ 2.0)
+leafpad:
+leafpad: Leafpad is a simple GTK+ text editor that emphasizes simplicity.
+leafpad: As development focuses on keeping weight down to a minimum,
+leafpad: only the most essential features are implemented in the editor.
+leafpad: Leafpad is simple to use, it's easily compiled, requires few
+leafpad: libraries and starts up quickly.
+leafpad:
+leafpad: 
+leafpad:
+leafpad: Package created by Niki Kovacs <info@microlinux.fr>
